--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" type="image/x-icon" href="/icon.ico">
+<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/GuiGui-OfficielYT/BoB-Not-Bob/site/icon.ico">
 <meta charset="UTF-8">
 <title>BoB not Bob</title>
 </head>
