--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/GuiGui-OfficielYT/BoB-Not-Bob/site/icon.ico">
 <meta charset="UTF-8">
 <title>BoB not Bob</title>
+<link rel="stylesheet" href="https://raw.githubusercontent.com/GuiGui-OfficielYT/BoB-Not-Bob/site/font.css">
+<style>
+body {
+  font-family: "Friday Night Funkin 2"
+}
+</style>
 </head>
 
 <body>
-  <p>É<p>
+  <p>Hello<p>
 </body>
 
 </html>
