--- a/index.html
+++ b/index.html
@@ -9,11 +9,32 @@
 body {
   font-family: "Friday Night Funkin 2"
 }
+.button {
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button1 {background-color: #04AA6D;} /* Green */
+
+.button1:hover {
+  background-color: #04AA6D;
+  color: white;
+}
 </style>
 </head>
 
 <body>
-  <p>Hello<p>
+  <h1>Steps to install the mod</h1>
+  <p>Download </p><a href="https://github.com/ShadowMario/FNF-PsychEngine/releases/latest"></a>
+  <button class="button button1" onclick="window.open('https://gamebanana.com/dl/696126')">Green</button>
 </body>
 
 </html>
