--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@ body {
 
 <body>
   <h1>Steps to install the mod</h1>
-  <p>Download </p><a href="https://github.com/ShadowMario/FNF-PsychEngine/releases/latest"></a>
-  <button class="button button1" onclick="window.open('https://gamebanana.com/dl/696126')">Green</button>
+  <p>Download <a href="https://github.com/ShadowMario/FNF-PsychEngine/releases/latest">the latest Psych Engine version</a>.</p>
+  <p>Extract "PsychEngine" on your Desktop then open it.</p>
+  <p>Click on the download button and put "BoB Full Week Not Excultable" into "mods" in the PsychEngine folder.</p>
+  <p>Open "PsychEngine.exe" if the mod is not loaded restart the game and go to "Mods" and enable it [it will restart the game not completely]</p>
+  <button class="button button1" onclick="window.open('https://gamebanana.com/dl/696126')">Download</button>
 </body>
 
 </html>
