--- a/index.html
+++ b/index.html
@@ -34,10 +34,17 @@ body {
 <body>
   <h1>Steps to install the mod</h1>
   <p>Download <a href="https://github.com/ShadowMario/FNF-PsychEngine/releases/latest">the latest Psych Engine version</a>.</p>
+  <img src="img/pedownload.png">
   <p>Extract "PsychEngine" on your Desktop then open it.</p>
-  <p>Click on the download button and put "BoB Full Week Not Excultable" into "mods" in the PsychEngine folder.</p>
-  <p>Open "PsychEngine.exe" if the mod is not loaded restart the game and go to "Mods" and enable it [it will restart the game not completely]</p>
-  <button class="button button1" onclick="window.open('https://gamebanana.com/dl/696126')">Download</button>
+  <img src="img/petodesktop.png">
+  <p>Click on the download button and put "BoB not bob" into "mods" in the PsychEngine folder.</p>
+  <button class="button button1" onclick="window.open('https://gamebanana.com/dl/696126')">Download (not a random ad)</button>
+  <div></div>
+  <img src="img/bnbtomods.png">
+  <p>Open "PsychEngine.exe" then go to "Mods" and enable the mod [it will restart the game].</p>
+  <img src="img/enablemod.png" width="600" height="310">
+  <div></div>
+
 </body>
 
 </html>
