--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@ body {
 </head>
 
 <body>
-  <h1>Steps to install the mod</h1>
+  <h1>BoB not bob</h1>
+  <a href="https://gamebanana.com/mods/335622"><img src="https://gamebanana.com/mods/embeddables/335622?type=medium"/></a>
+  <h3>Steps to install the mod</h3>
   <p>Download <a href="https://github.com/ShadowMario/FNF-PsychEngine/releases/latest">the latest Psych Engine version</a>.</p>
   <img src="img/pedownload.png">
   <p>Extract "PsychEngine" on your Desktop then open it.</p>
   <img src="img/petodesktop.png">
   <p>Click on the download button and put "BoB not bob" into "mods" in the PsychEngine folder.</p>
-  <button class="button button1" onclick="window.open('https://gamebanana.com/dl/696126')">Download (not a random ad)</button>
+  <button class="button button1" onclick="window.open('https://gamebanana.com/dl/1099674')">Download (not a random ad)</button>
   <div></div>
   <img src="img/bnbtomods.png">
   <p>Open "PsychEngine.exe" then go to "Mods" and enable the mod [it will restart the game].</p>
