--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ body {
   <p>Open "PsychEngine.exe" then go to "Mods" and enable the mod [it will restart the game].</p>
   <img src="img/enablemod.png" width="600" height="310">
   <div></div>
+  <div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=170557&s=5' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free website hit counter</a></small></div>
+
 
 </body>
 
