--- a/index.html
+++ b/index.html
@@ -1,53 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/GuiGui-OfficielYT/BoB-Not-Bob/site/icon.ico">
-<meta charset="UTF-8">
-<title>BoB not Bob</title>
-<link rel="stylesheet" href="https://raw.githubusercontent.com/GuiGui-OfficielYT/BoB-Not-Bob/site/font.css">
-<style>
-body {
-  font-family: "Friday Night Funkin 2"
-}
-.button {
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-
-.button1 {background-color: #04AA6D;} /* Green */
-
-.button1:hover {
-  background-color: #04AA6D;
-  color: white;
-}
-</style>
+    <meta charset="UTF-8" />
+    <title>ytggobs' FNF' mods</title>
 </head>
-
 <body>
-  <h1>BoB not bob</h1>
-  <a href="https://gamebanana.com/mods/335622"><img src="https://gamebanana.com/mods/embeddables/335622?type=medium"/></a>
-  <h3>Steps to install the mod</h3>
-  <p>Download <a href="https://github.com/ShadowMario/FNF-PsychEngine/releases/latest">the latest Psych Engine version</a>.</p>
-  <img src="img/pedownload.png">
-  <p>Extract "PsychEngine" on your Desktop then open it.</p>
-  <img src="img/petodesktop.png">
-  <p>Click on the download button and put "BoB not bob" into "mods" in the PsychEngine folder.</p>
-  <button class="button button1" onclick="window.open('https://gamebanana.com/dl/1099674')">Download (not a random ad)</button>
-  <div></div>
-  <img src="img/bnbtomods.png">
-  <p>Open "PsychEngine.exe" then go to "Mods" and enable the mod [it will restart the game].</p>
-  <img src="img/enablemod.png" width="600" height="310">
+    <a href="index.html">Home</a>
+    <a href="bob.html">Bob</a>
+    <h1>My Friday Night Funkin' mods</h1>
+    <p>Mods</p>
+    <a href="bob.html">BoB not bob</a>
     <div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=170557&s=5' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free website hit counter</a></small></div>
-  <div></div>
-
 </body>
-
 </html>
