--- a/bob.html
+++ b/bob.html
@@ -42,7 +42,7 @@ body {
   <p>Extract "PsychEngine" on your Desktop then open it.</p>
   <img src="img/petodesktop.png">
   <p>Click on the download button and put "BoB not bob" into "mods" in the PsychEngine folder.</p>
-  <button class="button button1" onclick="window.open('https://gamebanana.com/dl/1099674')">Download (not a random ad)</button>
+  <button class="button button1" onclick="window.open('https://gamebanana.com/dl/1099674')">Download from Gamebanana</button>
   <div></div>
   <img src="img/bnbtomods.png">
   <p>Open "PsychEngine.exe" then go to "Mods" and enable the mod [it will restart the game].</p>
