--- a/bob.html
+++ b/bob.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/GuiGui-OfficielYT/BoB-Not-Bob/site/icon.ico">
+<link rel="stylesheet" href="./nav.css">
+<link rel="icon" type="image/x-icon" href="./bob.ico">
 <meta charset="UTF-8">
 <title>BoB not Bob</title>
-<link rel="stylesheet" href="https://raw.githubusercontent.com/GuiGui-OfficielYT/BoB-Not-Bob/site/font.css">
+<link rel="stylesheet" href="./font.css">
 <style>
 body {
-  font-family: "funkin2"
+  font-family: "funkin"
 }
 .button {
   border: none;
@@ -25,15 +26,19 @@ body {
 .button1 {background-color: #04AA6D;} /* Green */
 
 .button1:hover {
-  background-color: #04AA6D;
+  background-color: #10f19f;
   color: white;
 }
 </style>
 </head>
 
 <body>
-  <a href="index.html">Home</a>
-  <a href="bob.html">Bob</a>
+  <body>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="bob.html">Bob</a></li>
+      <li><a href="hbct.html">MC Theme</a></li>
+  </ul>
   <h1>BoB not bob</h1>
   <a href="https://gamebanana.com/mods/335622"><img src="https://gamebanana.com/mods/embeddables/335622?type=medium"/></a>
   <h3>Steps to install the mod</h3>
@@ -43,13 +48,13 @@ body {
   <img src="img/petodesktop.png">
   <p>Click on the download button and put "BoB not bob" into "mods" in the PsychEngine folder.</p>
   <button class="button button1" onclick="window.open('https://gamebanana.com/dl/1099674')">Download from Gamebanana</button>
+  <button class="button button1" onclick="window.open('https://gamebanana.com/dl/1099674')">Download from GitHub</button>
   <div></div>
   <img src="img/bnbtomods.png">
   <p>Open "PsychEngine.exe" then go to "Mods" and enable the mod [it will restart the game].</p>
   <img src="img/enablemod.png" width="600" height="310">
-    <div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=170557&s=5' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free website hit counter</a></small></div>
-  <div></div>
-
 </body>
-
+<footer>
+<div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=170557&s=5' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free website hit counter</a></small></div>
+</footer>
 </html>
