--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="./nav.css">
     <meta charset="UTF-8" />
-    <title>ytggobs' FNF' mods</title>
+    <title>ytggobs</title>
 </head>
 <body>
-    <a href="index.html">Home</a>
-    <a href="bob.html">Bob</a>
-    <h1>My Friday Night Funkin' mods</h1>
-    <p>Mods</p>
+    <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="bob.html">Bob</a></li>
+    <li><a href="hbct.html">MC Theme</a></li>
+</ul>
+
+    <div>
+    <h1>My content</h1>
+    <h2>Accounts</h2>
+    <a href="https://linktr.ee/ytggobs">Linktree</a>
+    <br>
+    <h2>Mods</h2>
     <a href="bob.html">BoB not bob</a>
-    <div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=170563&s=45' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free website hit counter</a></small></div></body>
+    <br>
+    <h2>THC Theme</h2>
+    <a href="hbct.html">Minecraft Aquatic Theme</a>
+</div>
+</body>
+<footer>
+    <div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=9&id=170563&s=45' border='0' alt='Free Website Hit Counter'></a><br><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free website hit counter</a></small></div>
+</footer>
 </html>
