--- a/hbct.html
+++ b/hbct.html
@@ -32,7 +32,9 @@
             <li><a href="bob.html">Bob</a></li>
             <li><a href="hbct.html">MC Theme</a></li>
         </ul>
-        <button class="button button1" onclick="window.open('https://gamebanana.com/dl/1099674')">Download from GitHub</button>
+        <button class="button button1" onclick="window.open('https://github.com/ytggobs/ytggobswebsite/raw/master/themes/minecrafttheme1.3.zip')">v1.3</button>
+        <button class="button button1" onclick="window.open('https://github.com/ytggobs/ytggobswebsite/raw/master/themes/minecrafttheme1.4.zip')">v1.4</button>
+        
         
     </body>
     <footer>
