--- a/hbct.html
+++ b/hbct.html
@@ -32,9 +32,15 @@
             <li><a href="bob.html">Bob</a></li>
             <li><a href="hbct.html">MC Theme</a></li>
         </ul>
+        <div align="center">
+        <video width="320" height="240" autoplay muted loop>
+            <source src="demo.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
+          <br>
         <button class="button button1" onclick="window.open('https://github.com/ytggobs/ytggobswebsite/raw/master/themes/minecrafttheme1.3.zip')">v1.3</button>
         <button class="button button1" onclick="window.open('https://github.com/ytggobs/ytggobswebsite/raw/master/themes/minecrafttheme1.4.zip')">v1.4</button>
-        
+    </div>
         
     </body>
     <footer>
